--- a/ms/ifm.tex
+++ b/ms/ifm.tex
@@ -20,27 +20,14 @@ Honolulu, HI 96822}
 \date{\today}
 
 \begin{abstract}
-Interaction-free measurement is usually discussed in quantum language and
-refers to phenomena such as the presence of a photon absorber being
-inferred without it actually absorbing any photons.  Here we make the
-simple observation that there is an
-exactly analogous situation in classical mechanics: If one has
-a pair of identical coupled oscillators A \& B, and A is set in motion,
-then one will see the strength of the oscillation of A slowly decrease
-with time, and over longer times the energy will periodically `slosh' back
-and forth between the two systems.  But if instead oscillator B is damped -- so
-it is able to {\em absorb\/} energy -- the rate of decrease of the
-energy in oscillator A will be suppressed.   
-Thus one can infer the ability of oscillator B to 
-absorb energy by observing the behaviour of oscillator A without, in
-the limit that the damping is strong, there actually being any
-energy absorbed.
-% We review the physics and its realization in interferometric
-% experiments.  We then consider a simple classical system: two coupled
-% oscillators, one of which is damped; the energy dissipation can be
-% made arbitrarily small by making the damping large enough.  The
-% phenomenon can be considered analogous to interaction-free
-% measurement.
+Interaction-free measurement generally refers to quantum phenomena
+such as the presence of a photon absorber being inferred without it
+actually absorbing any photons.  Here we make the simple observation
+that there is an analogous situation in classical mechanics: two
+coupled oscillators, one of which is damped; the energy dissipation
+can be made arbitrarily small by making the damping large enough, thus
+revealing the presence of the damper despite arbitrarily low energy
+dissipation.
 \end{abstract}
 
 \maketitle
@@ -99,10 +86,21 @@ a situation where a non-detection enables an inference.)  Applications
 to non-invasive medical imaging\cite{PhysRevA.80.040902} are
 particularly interesting.
 
-In this paper, we relate the above simple picture on the one hand to
-the standard description of interaction-free measurement in terms of
-an interferometric setup, and on the other hand to a classical system
-of coupled oscillators.
+In this paper, we argue that interaction-free measurement need not be
+quantum at all.  Rather, the characteristics features of (a)~an
+amplitude that cycles between two states, but (b)~an absorber can
+block this cycling, thus revealing its presence, but without actually
+absorbing any energy, can also appear in classical systems.  If one
+has a pair of identical coupled oscillators $x$ and $y$, and $x$ is
+set in motion, one will see the strength of the oscillation of $x$
+slowly decrease with time, and over longer times the energy will
+periodically `slosh' back and forth between the two systems.  But if
+instead oscillator $y$ is damped --- so it is able to {\em absorb\/}
+energy --- the rate of decrease of the energy in oscillator $x$ will
+be suppressed.  Thus one can infer the ability of oscillator $y$ to
+absorb energy by observing the behaviour of oscillator $x$ without, in
+the limit that the damping is strong, there actually being any energy
+absorbed.
 
 The above thought experiment involving rotation the polarization plane
 of photon is one simple way to approach the concept of
