--- a/ms/ifm.bib
+++ b/ms/ifm.bib
@@ -233,3 +233,32 @@ doi = {10.1119/1.12592}
   publisher={Scribner}
 }
 
+@ARTICLE{2015NatCo...6E6811P,
+   author = {{Peise}, J. and {L{\"u}cke}, B. and {Pezz{\'e}}, L. and {Deuretzbacher}, F. and 
+	{Ertmer}, W. and {Arlt}, J. and {Smerzi}, A. and {Santos}, L. and 
+	{Klempt}, C.},
+    title = "{Interaction-free measurements by quantum Zeno stabilization of ultracold atoms}",
+  journal = {Nature Communications},
+     year = 2015,
+    month = apr,
+   volume = 6,
+      eid = {6811},
+    pages = {6811},
+      doi = {10.1038/ncomms7811},
+   adsurl = {http://adsabs.harvard.edu/abs/2015NatCo...6E6811P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{1977JMP....18..756M,
+   author = {{Misra}, B. and {Sudarshan}, E.~C.~G.},
+    title = "{The Zeno's paradox in quantum theory}",
+  journal = {Journal of Mathematical Physics},
+     year = 1977,
+    month = apr,
+   volume = 18,
+    pages = {756-763},
+      doi = {10.1063/1.523304},
+   adsurl = {http://adsabs.harvard.edu/abs/1977JMP....18..756M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
