--- a/ms/ifm.tex
+++ b/ms/ifm.tex
@@ -57,8 +57,8 @@ rotated and then reset to vertical.  If the photon is re-routed back
 to the apparatus $N$ times, it will still most likely emerge
 vertically polarized.  The rotator and the polarizer appear to cancel
 each other out.  The general phenomenon is known as the quantum Zeno
-effect,\cite{PhysRevA.41.2295} but it can also be described in
-everyday language, in terms of waking and sleeping
+effect,\cite{1977JMP....18..756M,PhysRevA.41.2295} but it can also be
+described in everyday language, in terms of waking and sleeping
 states.\cite{orzel2009teach}
 
 What happens if we now remove the polarizer?  Clearly, the $N$ Faraday
@@ -94,7 +94,7 @@ absorbing any energy, can also appear in classical systems.  If one
 has a pair of identical coupled oscillators $x$ and $y$, and $x$ is
 set in motion, one will see the strength of the oscillation of $x$
 slowly decrease with time, and over longer times the energy will
-periodically `slosh' back and forth between the two systems.  But if
+periodically slosh back and forth between the two systems.  But if
 instead oscillator $y$ is damped --- so it is able to {\em absorb\/}
 energy --- the rate of decrease of the energy in oscillator $x$ will
 be suppressed.  Thus one can infer the ability of oscillator $y$ to
@@ -102,17 +102,20 @@ absorb energy by observing the behaviour of oscillator $x$ without, in
 the limit that the damping is strong, there actually being any energy
 absorbed.
 
-The above thought experiment involving rotation the polarization plane
-of photon is one simple way to approach the concept of
-interaction-free measurement, but not the only one.  Another
-well-known description, which more closely resembles some of the
-actual experiments, is in terms of a Mach-Zehnder interferometer.  The
-horizontal and vertical polarization states are replaced by the two
-arms of the interferometer.  Figure~\ref{fig:mz} schematically shows
-the $N=1$ case; the general case would be a concatenation of such
-devices.
+In the other sections of this paper, we flesh out the above argument.
+In section~\ref{sec:interf} we work through an alternative well-known
+description of interaction-free measurement, more closely resembles
+some of the actual experiments.  This is in terms of a Mach-Zehnder
+interferometer, whose two arms replace the horizontal and vertical
+polarization states of the above thought-experiment.
+Figure~\ref{fig:mz} schematically shows the $N=1$ case; the general
+case would be a concatenation of such devices.  With an absorber, the
+amplitude sloshes between the 'lower' and 'upper' arms of the
+interferometer; the absorber results in confining the amplitude to the
+lower arm.  Section~\ref{sec:oscill} briefly solves for the
+oscillators $x$ and $y$ from the previous paragraph.
 
-\section{An interferometer as an absorber detector}
+\section{An interferometer as an absorber detector}\label{sec:interf}
 
 Let us express the interferometric setup of Figure~\ref{fig:mz} in the
 language of quantum two-state systems, borrowing the notation of
@@ -197,7 +200,7 @@ interaction-free measurement.  With no absorber the amplitude cycles
 between $\ket0$ and $\ket1$.  An absorber blocks the sloshing, without
 necessarily absorbing.
 
-\section{Coupled oscillators as an absorber detector}
+\section{Coupled oscillators as an absorber detector}\label{sec:oscill}
 
 In the previous section we considered a system that could be quantum,
 or classically wave-optic.  In this section, we show that the same
