--- a/ms/ifm.bib
+++ b/ms/ifm.bib
@@ -224,7 +224,7 @@ doi = {10.1119/1.12592}
 }
 
 @book{orzel2009teach,
-  title={How to Teach Physics to Your Dog},
+  title={How to Teach Quantum Physics to Your Dog},
   author={Orzel, C.},
   isbn={9781416572282},
   lccn={2009021073},
