--- a/ms/ifm.tex
+++ b/ms/ifm.tex
@@ -222,8 +222,8 @@ a system can be written, with a suitable choice of units, as
 Without the damping term ($\gamma=0$), it is easy to verify that
 \begin{equation}
 \begin{array}{l}
-2x = \cos(\sqrt{1+\kappa}\,t) + \cos(\sqrt{1-\kappa}\,t)  \\
-2y = \cos(\sqrt{1+\kappa}\,t) - \cos(\sqrt{1-\kappa}\,t)
+2x = \cos(t\sqrt{1+\kappa}) + \cos(t\sqrt{1-\kappa})  \\
+2y = \cos(t\sqrt{1+\kappa}) - \cos(t\sqrt{1-\kappa})
 \end{array}
 \end{equation}
 is a solution for the initial conditions
