--- a/ms/saha-kaiser.tex
+++ b/ms/saha-kaiser.tex
@@ -277,7 +277,7 @@ coupled to an RLC circuit) we are used to the idea that increasing
 resistance reduces dissipation.  Quantum interaction-free measurement
 can thus be seen simply as a quantized version of such a system.
 
-\bibliography{ifm.bib}
+\bibliography{saha-kaiser.bib}
 
 \newpage
 
